@@ -28,6 +28,9 @@ bzr-svn 0.5.3                   UNRELEASED
 
    * Fix recognizing tags when using wildcard layouts. (#333960)
 
+   * Fetch left-hand side ancestry if it's outside of the prefix in
+     svn-import. (#334692)
+
   PERFORMANCE
 
    * Significant speed improvements when no (old) tags have to be fetched. Requires 
